# finance_ml

./: .gitignore  Dockerfile  README.md  Tiltfile  build.gradle  main.py  pyproject.toml
data/: stock_general_info.csv
data/stockpup_data/: fundamental_data_excel_A.csv  fundamental_data_excel_AAL.csv  fundamental_data_excel_AAN.csv  fundamental_data_excel_AAP.csv  fundamental_data_excel_AAPL.csv  fundamental_data_excel_ABBV.csv  fundamental_data_excel_ABC.csv  fundamental_data_excel_ABI.csv  fundamental_data_excel_ABMD.csv  fundamental_data_excel_ABT.csv  fundamental_data_excel_ACAS.csv  fundamental_data_excel_ACC.csv  fundamental_data_excel_ACIW.csv  fundamental_data_excel_ACM.csv  fundamental_data_excel_ACN.csv  fundamental_data_excel_ACS.csv  fundamental_data_excel_ACV.csv  fundamental_data_excel_ADBE.csv  fundamental_data_excel_ADCT.csv  fundamental_data_excel_ADI.csv  fundamental_data_excel_ADM.csv  fundamental_data_excel_ADP.csv  fundamental_data_excel_ADS.csv  fundamental_data_excel_ADSK.csv  fundamental_data_excel_ADT.csv  fundamental_data_excel_AEE.csv  fundamental_data_excel_AEO.csv  fundamental_data_excel_AEP.csv  fundamental_data_excel_AES.csv  fundamental_data_excel_AET.csv  fundamental_data_excel_AFG.csv  fundamental_data_excel_AFL.csv  fundamental_data_excel_AGCO.csv  fundamental_data_excel_AGN.csv  fundamental_data_excel_AHL.csv  fundamental_data_excel_AIG.csv  (+720 more)
kubernetes/: local.yml
routes/: __init__.py  exceptions.py  monitor.py  serve.py
scripts/: quandl_client.py  read_stockpup_data.py  secrets.py  yahoo_finance.py  yahoo_finance_constants.py
(+39 files in other folders)
